Refactor to use language code for feeds
