# internal/entity/feed.go
@@ -14,11 +14,12 @@ type Feed struct {
 	PublicationUUID uuid.UUID `json:"publication_uuid"`
 	// URL of the feed
 	// TODO: separate type, validation (value object)
-	URL string `json:"url"`
+	URL          string `json:"url"`
+	LanguageCode string `json:"language_code"`
 }
 
 func (f *Feed) String() string {
-	return fmt.Sprintf("PublicationUUID: %v, URL: %s", f.PublicationUUID, f.URL)
+	return fmt.Sprintf("PublicationUUID: %v, URL: %s, Language: %s", f.PublicationUUID, f.URL, f.LanguageCode)
 }
 
 // FeeFeedHTTPMetadata is used during feed retrieval and parsing
